<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="my_nanodegree_apps_text">MY NANODEGREE APPS!</string>
    <string name="welcome_title_text">Welcome</string>
    <string name="please_wait_msg_text">Please Wait..</string>
    <string name="http_error_msg_text">There was a problem, please try again.</string>

    <!--Menu items texts-->
    <string name="action_sort_popular_movies_text">Popular Movies</string>
    <string name="action_sort_highest_rated_movies_text">Highest Rated Movies</string>
    <!--Menu items texts-->

    <!--App texts-->
    <string name="popular_movies_app_text">POPULAR MOVIES</string>
    <string name="super_duo_app_text">SUPER DUO</string>
    <string name="library_app_text">LIBRARY APP</string>
    <string name="build_it_bigger_app_text">BUILD IT BIGGER</string>
    <string name="xyz_reader_app_text">XYZ READER</string>
    <string name="capstone_app_text">CAPSTONE: MY OWN APP</string>
    <!--App texts-->


    <!--Toasts texts-->
    <string name="popular_movies_app_toast_text">This button will launch Popular Movies App!</string>
    <string name="super_duo_app_toast_text"> This button will launch SuperDuo App!</string>
    <string name="library_app_toast_text">This button will launch Library App!</string>
    <string name="build_it_bigger_app_toast_text">This button will launch Build it Bigger App!</string>
    <string name="xyz_reader_app_toast_text">This button will launch XYZ Reader App!</string>
    <string name="capstone_app_toast_text">This button will launch My Capstone App!</string>
    <!--Toasts texts-->


    <!--Popular Movies texts-->
    <string name="popular_movies_title_text">Popular Movies</string>
    <string name="highest_rated_movies_title_text">Highest Rated Movies</string>
    <string name="favorite_movies_title_text">Favorite Movies</string>
    <string name="movie_details_title_text">Movie Detail</string>
    <string name="movie_trailers_text">Trailers :</string>
    <string name="mark_favorite_text">Mark Favorite</string>
    <string name="action_sort_favorite_movies_text">Favorite Movies</string>
    <string name="not_connected_to_internet_text">Not Connected to Internet.</string>
    <string name="marked_as_favorite_movie_text">Marked as Favorite</string>
    <string name="no_favorite_movies_text">You have no Favorite Movies!</string>
    <string name="movie_reviews_text">Reviews :</string>
    <string name="movie_review_text"><b>Review : </b></string>
    <string name="trailer_name_text">TrailerName</string>
    <string name="no_movie_reviews_yet">No Reviews</string>
    <string name="movie_reviewer_name_text"><b>Reviewer : </b></string>
    <string name="share_text">Share</string>
    <string name="trailer_share_msg_text">Hey! Check this trailer... \n</string>
    <!--Popular Movies texts-->

</resources>
